--- a/index.html
+++ b/index.html
@@ -1,4 +1,25 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+</head>
+<body>
+     <h1>Lesego Kgopane's Portfolio</h1>
+     <h2>I'm a Web Developer</h2>
+     <hr/>
+     <a href="./public/movie-ranking.html">Movie Ranking Project</a>
+     <img src="./assets/images/movie-ranking.png" alt="Movie ranking Page" height="200"/>
+
+     <a href="./public/about.html">Birthday Invite Project</a>
+     <img src="./assets/images/birthday-invite.png" alt="Birthday Invite page " height="200"/>
+    <hr/>
+     <a href="./public/about.html" >About Me</a>
+     <a href="./public/contact.html">Contact Me</a>
+</body>
+</html>
 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
